--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -74,6 +74,7 @@ header {
 nav {
     position: relative;
     display: flex;
+    flex-wrap: nowrap;
     height: auto;
     width: auto;
     padding: 1.3% 10%;
@@ -326,23 +327,23 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     max-width: 90%;
     min-width: 90%;
     flex-direction: column;
-    margin: 2em auto;
+    margin: auto;
     text-align: center;
 }
 
 .new-art-title, .best-selling-art-title, .seasonal-art-title, .create-account-fieldset legend {
     display: inline;
     height: auto;
-    margin: auto;
+    margin: 2em auto 1em auto;
     text-align: center;
-    font-size: 1.45rem;
+    font-size: 1.45em;
     font-family: var(--font-main);
     color: var(--color-dark-blue);
 }
 
 .new-art-carousel, .best-selling-art-carousel, .seasonal-art-carousel {
     display: flex;
-    margin: 0 auto;
+    margin: 0 auto 1em auto;
     width: 100%;
     height: 100%;
     align-items: center;
@@ -353,7 +354,8 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .previous-element-button-container, .next-element-button-container {
     display: flex;
-    height: 20%;
+    position: relative;
+    height: 15%;
     width: auto;
     margin: auto;
 }
@@ -368,20 +370,26 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .previous-element-button::before {
+    display: flex;
     content: "<";
     height: 100%;
-    width: auto;
+    width: 100%;
     margin: auto;
+    align-items: center;
+    justify-content: center;
     font-size: 2.5em;
     font-weight: bold;
     color: var(--color-darker-blue);
 }
 
 .next-element-button::before {
+    display: flex;
     content: ">";
     height: 100%;
     width: auto;
     margin: auto;
+    align-items: center;
+    justify-content: center;
     font-size: 2.5em;
     font-weight: bold;
     color: var(--color-darker-blue);
@@ -394,6 +402,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .new-art-item-container, .best-selling-art-item-container, .seasonal-art-item-container {
     display: flex;
+    position: relative;
     overflow: scroll;
     height: auto;
     width: 90%;
@@ -443,7 +452,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     flex-direction: column;
     justify-items: center;
     text-align: center;
-    padding: 1%;
+    padding: 1.8%;
     background-color: var(--color-white);
     border-style: solid;
     border-color: var(--color-dark-blue);
@@ -452,8 +461,9 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .art-item-image-container {
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     background-color: var(--color-white);
     height: 50%;
     width: 100%;
@@ -462,7 +472,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .art-item img {
-    display: inline;
+    display: block;
     margin: auto;
     height: 8em;
     width: fit-content;
@@ -485,7 +495,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     width: 100%;
     max-height: 50%;
     min-height: 50%;
-    margin: 1rem 0 0 0;
+    margin: 1.5rem 0 0 0;
 }
 
 .art-desc {
@@ -534,6 +544,10 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     cursor: pointer;
 }
 
+.carousel-indicator {
+    margin: auto auto 1em auto;
+}
+
 
 .shipping-info-banner {
     display: flex;
@@ -572,6 +586,9 @@ footer {
 }
 
 .footer-links-bar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     width: 100%;
     margin: auto;
     padding: 15px;
@@ -580,19 +597,18 @@ footer {
     border-style: solid;
     border-width: 3px 0 0 0;
     justify-content: space-evenly;
-    display: flex;
 }
 
 .about-links-container , .help-links-container , .store-links-container {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     height: auto;
     width: auto;
     margin: auto;
     justify-content: center;
 }
 
-.footer-links-bar .about-links-container h4, .footer-links-bar .help-links-container h4,
-.footer-links-bar .store-links-container h4 {
+.about-links-container h4, .help-links-container h4, .store-links-container h4 {
     display: inline-block;
     padding: 0.6rem;
     color: var(--color-darker-blue);
@@ -603,15 +619,15 @@ footer {
     border-bottom-color: var(--color-darker-blue);
 }
 
-.about-links-container .about-list, .help-links-container .help-list, .store-links-container .store-list {
+.about-list, .help-list, .store-list {
     list-style: none;
     justify-content: center;
 }
 
-.about-links-container .about-list li, .help-links-container .help-list li, .store-links-container .store-list li {
+.about-list li, .help-list li, .store-list li {
+    display: block;
     margin: auto;
     padding: 0.8rem;
-    display: grid;
 }
 
 .footer-links-bar ul li a {
