--- a/Sitio-Web/CSS/Style.css
+++ b/Sitio-Web/CSS/Style.css
@@ -33,27 +33,32 @@
 }
 */
 
-::selection {
-    color: var(--color-white);
-    background-color: var(--color-dark-blue);
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+::selection {
+    color: var(--color-white);
+    background-color: var(--color-dark-blue);
+}
+
 
 body {
-    display: grid;
+    display: flex;
     height: auto;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    flex: 1 1 0;
     align-items: center;
     justify-items: center;
     overflow-X: hidden;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     background-image: url(../Images/yarnBackgroundTexture.svg);
     background-size: auto;
     background-repeat: repeat;
@@ -63,7 +68,7 @@ body {
 
 header {
     position: sticky;
-    z-index: 500;
+    z-index: 50;
     display: block;
     width: 100%;
     height: auto;
@@ -74,25 +79,41 @@ header {
 nav {
     position: relative;
     display: flex;
-    flex-wrap: nowrap;
     height: auto;
     width: auto;
+    margin: auto;
     padding: 1.3% 10%;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row;
     background-color: var(--color-dark-blue);
-    
     justify-content: space-evenly;
+    align-content: center;
 }
 
+.menu-toggle {
+    display: none;
+}
 
-.search-bar-container-hidden {
+.menu-button {
     position: absolute;
     display: none;
+    height: 3rem;
+    width: 3rem;
+    margin: auto auto auto 0;
+    flex: 0 1 3rem;
+    background-color: var(--color-white);
+    border-style: none;
+    border-radius: var(--border-radius-50);
+    cursor: pointer;
+}
+
+.search-bar-container-hidden {
+    display: none;
     margin: auto;
-    height: 4.8rem;
+    height: 12vh;
     width: 100%;
     justify-content: center;
+    align-content: center;
     background-color: var(--color-dark-blue);
 }
 
@@ -100,10 +121,11 @@ nav {
     position: absolute;
     display: flex;
     margin: auto;
-    height: 4.8rem;
+    height: 12vh;
     width: 100%;
     justify-content: center;
     background-color: var(--color-dark-blue);
+    z-index: 75;
 }
 
 .search-bar-input-container {
@@ -122,11 +144,12 @@ nav {
     display: inline;
     height: 2rem;
     width: auto;
-    margin: auto 0.5rem auto auto;
+    margin: auto;
     background-color: var(--color-white);
     border-style: none;
     vertical-align: middle;  
     cursor: pointer;
+    transition: transform 0.3s ease-in-out;
 }
 
 .close-button {
@@ -176,10 +199,13 @@ nav {
 
 
 .svg-logo {
+    position: relative;
     display: inline;
-    height: 4.8em;
+    flex: 0 1 auto;
+    height: 12vh;
     width: auto;
     margin: auto auto auto 0;
+    align-self: center;
 }
 
 .svg-logo:hover {
@@ -188,18 +214,34 @@ nav {
 }
 
 .svg-logo img {
-    height: 100%;
+    display: inline;
+    margin: auto;
+    height: inherit;
+    width: inherit;
+    max-width: inherit;
+    max-height: inherit;
+    object-fit: cover;
+    image-rendering: auto;
+}
+
+.nav-button-bar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex: 0 1 0;
     width: auto;
+    margin: 0 0 0 auto;
+    justify-content: flex-end;
 }
 
 .search-button {
     height: 3rem;
     width: 3rem;
-    margin: auto 1.5rem auto auto;
+    margin: 1rem;
+    flex: 0 1 3rem;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
-    vertical-align: middle;
     cursor: pointer;
 }
 
@@ -207,26 +249,27 @@ nav {
     display: inline;
     height: 3rem;
     width: 3rem;
-    margin: auto 1.5rem;
+    margin: 1rem;
+    flex: 0 1 3rem;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
-    vertical-align: middle;
     cursor: pointer;
 }
 
 .cart-button {
     height: 3rem;
     width: 3rem;
-    margin: auto 0 auto 1.5rem;
+    margin: 1rem;
+    flex: 0 1 3rem;
     background-color: var(--color-white);
     border-style: none;
     border-radius: var(--border-radius-50);
-    vertical-align: middle;
     cursor: pointer;
 }
 
-.search-button img, .account-button img, .cart-button img {
+.search-button img, .account-button img, .cart-button img, .menu-button img {
+    display: block;
     height: 90%;
     width: auto;
     margin: auto;
@@ -238,33 +281,50 @@ nav {
 
 .nav-link-list {
     display: flex;
+    flex: 2 1 0;
     overflow: hidden;
     list-style: none;
     margin: auto;
     width: auto;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav-link-sub-list {
     display: none;
     overflow: hidden;
     list-style: none;
+    flex: 2 1 0;
     margin: auto;
     width: 10rem;
     max-width: 10rem;
     min-width: 10rem;
+    justify-items: center;
+    align-items: center;
     background-color: var(--color-white);
     border-width: 0 1px 1px 1px;
     border-style: solid;
-    border-color: var(--color-dark-blue);
+    border-color: var(--color-light-grey);
     border-radius: var(--border-radius-4);
 }
 
 .nav-link-list li {
     display: block;
+    height: auto;
+    width: 10rem;
+    max-width: 10rem;
+    min-width: 10rem;
+    flex: 2 1 1;
+    text-align: center;
+    align-self: center;
 }
 
 .nav-link-sub-list li {
     display: block;
+    flex: 1 1 10;
+    text-align: center;
+    align-self: center;
+    width: auto;
     background-color: var(--color-white);
     border-width: 2px 0 0 0;
     border-style: solid;
@@ -304,7 +364,6 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     z-index: 100;
     display: flex;
     flex-direction: column;
-    transition: 0.5s all;
 }
 
 .nav-decoration-line {
@@ -320,14 +379,13 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     background-color: var(--color-white);
 }
 
+/*-------------CAROUSEL-------------*/
 .new-art, .best-selling-art, .seasonal-art {
     display: flex;
     height: 100%;
-    width: 90%;
-    max-width: 90%;
-    min-width: 90%;
+    width: 95%;
     flex-direction: column;
-    margin: auto;
+    flex: 1 1 0;
     text-align: center;
 }
 
@@ -336,19 +394,21 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     height: auto;
     margin: 2em auto 1em auto;
     text-align: center;
-    font-size: 1.45em;
+    font-size: 1.6rem;
     font-family: var(--font-main);
     color: var(--color-dark-blue);
 }
 
 .new-art-carousel, .best-selling-art-carousel, .seasonal-art-carousel {
     display: flex;
-    margin: 0 auto 1em auto;
     width: 100%;
     height: 100%;
+    margin: 0 auto 1em auto;
+    flex-direction: row;
+    flex: 1 1 0;
     align-items: center;
-    justify-content: center;
-    overflow: hidden;
+    justify-content: space-evenly;
+    overflow: visible;
     transform-style: flat;
 }
 
@@ -358,41 +418,35 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     height: 15%;
     width: auto;
     margin: auto;
+    overflow: visible;
 }
 
 .previous-element-button, .next-element-button {
     height: 100%;
     width: 100%;
-    padding: 1em 0.5em ;
-    background-color: var(--color-coral);
+    background-color: transparent;
     border-style: none;
-    border-radius: var(--border-radius-16);
+    cursor: pointer;
 }
 
-.previous-element-button::before {
+.previous-element-button::before, .next-element-button::before{
     display: flex;
-    content: "<";
     height: 100%;
     width: 100%;
     margin: auto;
     align-items: center;
     justify-content: center;
-    font-size: 2.5em;
+    font-size: 3.2em;
     font-weight: bold;
     color: var(--color-darker-blue);
 }
 
+.previous-element-button::before {
+    content: "<";
+}
+
 .next-element-button::before {
-    display: flex;
     content: ">";
-    height: 100%;
-    width: auto;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    font-size: 2.5em;
-    font-weight: bold;
-    color: var(--color-darker-blue);
 }
 
 .previous-element-button:hover, .next-element-button:hover {
@@ -401,22 +455,20 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 .new-art-item-container, .best-selling-art-item-container, .seasonal-art-item-container {
-    display: flex;
     position: relative;
-    overflow: scroll;
-    height: auto;
+    display: flex;
+    overflow-x: scroll;
+    height: 100%;
     width: 90%;
-    max-width: 90%;
-    min-width: 90%;
     margin: auto;
     padding: 1% 1% 1% 0;
-    border-width: 1rem 1.8rem;
+    border-width: 0.5em 1.5em;
     border-style: solid;
     align-items: start;
     flex-direction: row;
+    flex: 2 1 0;
+    gap: 1.5em;
     justify-content: start;
-    transform-style: flat;
-    perspective: 600px;
 }
 
 .new-art-item-container {
@@ -438,21 +490,20 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     border-color: var(--color-electric-blue);
 }
 
-
+/*-------------PRODUCT-------------*/
 .art-item {
     position: relative;
-    display: flex;
+    display: grid;
     height: 100%;
     width: 18%;
     max-width: 18%;
     min-width: 18%;
-    max-height: 18%;
-    min-height: 18%;
-    margin: 0 2% 0 0;
-    flex-direction: column;
+    overflow: hidden;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     justify-items: center;
     text-align: center;
-    padding: 1.8%;
+    padding: 1.5%;
     background-color: var(--color-white);
     border-style: solid;
     border-color: var(--color-dark-blue);
@@ -461,21 +512,21 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 
 .art-item-image-container {
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background-color: var(--color-white);
-    height: 50%;
-    width: 100%;
-    max-height: 50%;
-    min-height: 50%;
+    display: flex;
+    height: 15vh;
+    width: auto;
+    overflow: hidden;
 }
 
 .art-item img {
-    display: block;
+    display: inline;
     margin: auto;
-    height: 8em;
-    width: fit-content;
+    height: inherit;
+    width: inherit;
+    max-width: inherit;
+    max-height: inherit;
+    flex: 0 1 0;
+    object-fit: cover;
     border-radius: var(--border-radius-24);
     image-rendering: auto;
 }
@@ -489,29 +540,26 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     position: relative;
     display: flex;
     flex-direction: column;
-    flex: 0 1 auto;
-    overflow: hidden;
     height: 50%;
     width: 100%;
     max-height: 50%;
     min-height: 50%;
-    margin: 1.5rem 0 0 0;
+    margin: 1.5em 0 0 0;
 }
 
 .art-desc {
-    display: inline;
     position: relative;
+    display: inline;
     margin: auto;
-    height: 70%;
+    height: 80%;
     width: 100%;
-    max-height: 70%;
-    min-height: 70%;
-    overflow: scroll;
+    max-height: 80%;
+    min-height: 80%;
+    overflow: hidden;
     overflow-wrap: break-word;
-    flex: 0 1 50px;
-    background-color: var(--color-white);
+    flex: 0 1 80%;
     text-align: justify;
-    font-size: 16.5px;
+    font-size: 1.2rem;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
 }
@@ -519,15 +567,13 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 .art-price {
     display: inline;
     position: relative;
-    z-index: 2;
-    margin: 15px auto auto auto;
-    height: 30%;
+    margin: 1.5em auto auto auto;
+    height: 20%;
     width: 100%;
-    max-height: 30%;
-    min-height: 30%;
-    flex: 0 1 auto;
-    background-color: var(--color-white);
-    font-size: 16.5px;
+    max-height: 20%;
+    min-height: 20%;
+    flex: 0 1 20%;
+    font-size: 1.2rem;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
     text-align: center;
@@ -549,10 +595,12 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
 }
 
 
+/*-------------BANNER-------------*/
 .shipping-info-banner {
     display: flex;
     height: 5rem;
     width: 100%;
+    padding: 2%;
     align-items: center;
     justify-content: space-evenly;
     background-image: linear-gradient(to bottom, var(--color-wine-red), var(--color-wine-red), var(--color-coral));
@@ -586,34 +634,38 @@ footer {
 }
 
 .footer-links-bar {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    display: flex;
+    height: auto;
     width: 100%;
     margin: auto;
-    padding: 15px;
+    padding: 1rem;
     background-color: var(--color-white);
     border-color: var(--color-light-grey);
     border-style: solid;
     border-width: 3px 0 0 0;
     justify-content: space-evenly;
+    align-content: space-between;
 }
 
 .about-links-container , .help-links-container , .store-links-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: auto;
     width: auto;
     margin: auto;
+    flex: 1 1 1;
     justify-content: center;
+    align-content: center;
 }
 
 .about-links-container h4, .help-links-container h4, .store-links-container h4 {
     display: inline-block;
-    padding: 0.6rem;
+    padding: 0.5rem;
     color: var(--color-darker-blue);
+    flex: 1 2 0;
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
     font-family: var(--font-main);
     line-height: 10px;
     border-bottom-color: var(--color-darker-blue);
@@ -625,17 +677,18 @@ footer {
 }
 
 .about-list li, .help-list li, .store-list li {
-    display: block;
+    display: grid;
     margin: auto;
-    padding: 0.8rem;
+    padding: 0.5rem;
+    flex: 1 1 0;
 }
 
 .footer-links-bar ul li a {
     display: block;
     color: var(--color-darker-blue);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-family: var(--font-main);
-    line-height: 0.5rem;
+    line-height: 1.2rem;
     cursor: pointer;
 }
 
@@ -877,4 +930,153 @@ footer {
 .create-account-form button:hover {
     background-color: var(--color-lighter-blue);
     border-color: var(--color-lighter-blue);
+}
+
+
+@media only screen and (max-width: 480px) { 
+    .search-bar-container-visible {
+        height: 6vh;
+    }
+
+    .search-bar-input-container {
+        width: 80%;
+    }
+
+    nav .svg-logo {
+        height: 4vh;
+        margin: auto;
+    }
+
+    .art-item {
+        width: 68%;
+        max-width: 68%;
+        min-width: 68%;
+        padding: 4%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .search-bar-container-visible {
+        height: 8vh;
+    }
+
+    .search-bar-input-container {
+        width: 60%;
+    }
+
+    nav .svg-logo {
+        height: 6vh;
+        margin: auto;
+    }
+
+    .search-button, .account-button, .cart-button, .menu-button {
+        height: 2.5rem;
+        width: 2.5rem;
+        margin: 0.5rem;
+        flex: 0 1 2.5rem;
+    }
+
+    .new-art-title, .best-selling-art-title, .seasonal-art-title {
+        font-size: 1.4rem;
+    }
+
+    .art-item-image-container {
+        height: 10vh;
+    }
+
+    .shipping-info-banner {
+        font-size: 0.8rem;
+        text-align: left;
+    }
+
+    .footer-links-bar ul li a {
+        font-size: 0.8rem;
+
+    }
+
+    .about-links-container h4, .help-links-container h4, .store-links-container h4 {
+        font-size: 1rem;
+    }
+
+    .footer-copyright-content small {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 800px) {
+    .art-item {
+        width: 35%;
+        max-width: 35%;
+        min-width: 35%;
+        padding: 2.5%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    nav {
+        padding: 1.3% 5%;
+    }
+
+    .search-bar-container-visible {
+        height: 10vh;
+    }
+
+    nav .svg-logo {
+        height: 8vh;
+        margin: auto;
+    }
+
+    .menu-button {
+        position: relative;
+        display: inline;
+        z-index: 70;
+    }
+
+    .nav-link-list {
+        position: fixed;
+        display: flex;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: auto;
+        padding: 10% 0 0 2%;
+        margin: auto;
+        flex-direction: column;
+        color: var(--color-dark-blue);
+        background-color: var(--color-white);
+        z-index: 30;
+        transform: translateX(-100%);
+    }
+
+    .nav-link-list li a {
+        color: var(--color-dark-blue);
+        font-size: 1em;
+        text-align: left;
+    }
+
+    .nav-link-sub-list li a {
+        color: var(--color-dark-blue);
+        font-size: 0.8em;
+    }
+
+    .menu-toggle:checked ~ nav .nav-link-list {
+        overflow: visible;
+        transform: translateX(0);
+        background-color: var(--color-white);
+    }
+
+    .menu-toggle:checked ~ nav .menu-button {
+        background-color: transparent;
+    }
+
+    .nav-link-sub-list {
+        transform: translate(82%, -20%);
+        border-width: 1px;
+        transition: transform 0.2s ease-in;
+        z-index: 35;
+    }
+
+    .art-item-image-container {
+        height: 12vh;
+    }
 }
