--- a/Sitio-Web/src/css/Style.css
+++ b/Sitio-Web/src/css/Style.css
@@ -33,6 +33,9 @@
 }
 */
 
+@import "tailwindcss";
+@plugin "daisyui";
+
 * {
     margin: 0;
     padding: 0;
@@ -57,9 +60,8 @@ body {
     align-items: center;
     justify-items: center;
     overflow-X: hidden;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background-image: url(../Images/yarnBackgroundTexture.svg);
+    background-color: var(--color-white);
+    background-image: url(../Public/Images/yarnBackgroundTexture.svg);
     background-size: auto;
     background-repeat: repeat;
     background-position: center;
@@ -315,7 +317,7 @@ nav {
     width: 10rem;
     max-width: 10rem;
     min-width: 10rem;
-    flex: 2 1 1;
+    flex: 2 1 0;
     text-align: center;
     align-self: center;
 }
@@ -396,6 +398,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     margin: 2em auto 1em auto;
     text-align: center;
     font-size: 1.6rem;
+    font-weight: bolder;
     font-family: var(--font-main);
     color: var(--color-dark-blue);
 }
@@ -557,6 +560,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     overflow-wrap: break-word;
     text-align: justify;
     font-size: 1.2rem;
+    font-weight: bold;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
 }
@@ -567,6 +571,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     margin: auto;
     width: 100%;
     font-size: 1.2rem;
+    font-weight: bold;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
     text-align: center;
@@ -637,8 +642,8 @@ footer {
     border-color: var(--color-light-grey);
     border-style: solid;
     border-width: 3px 0 0 0;
+    align-items: center;
     justify-content: space-evenly;
-    align-content: space-between;
 }
 
 .about-links-container , .help-links-container , .store-links-container {
@@ -653,7 +658,7 @@ footer {
 }
 
 .about-links-container h4, .help-links-container h4, .store-links-container h4 {
-    display: inline-block;
+    display: block;
     padding: 0.5rem;
     color: var(--color-darker-blue);
     flex: 1 2 0;
@@ -666,6 +671,7 @@ footer {
 }
 
 .about-list, .help-list, .store-list {
+    display: block;
     list-style: none;
     justify-content: center;
 }
