--- a/Sitio-Web/src/css/Style.css
+++ b/Sitio-Web/src/css/Style.css
@@ -34,7 +34,15 @@
 */
 
 @import "tailwindcss";
-@plugin "daisyui";
+
+@plugin "daisyui" {
+  themes: light --default;
+  root: ":root";
+  include: ;
+  exclude: ;
+  prefix: ;
+  logs: true;
+}
 
 * {
     margin: 0;
@@ -312,12 +320,12 @@ nav {
 }
 
 .nav-link-list li {
-    display: block;
+    display: inline;
     height: auto;
     width: 10rem;
     max-width: 10rem;
     min-width: 10rem;
-    flex: 2 1 0;
+    flex: 0 1 5rem;
     text-align: center;
     align-self: center;
 }
@@ -398,7 +406,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     margin: 2em auto 1em auto;
     text-align: center;
     font-size: 1.6rem;
-    font-weight: bolder;
+    font-weight: bold;
     font-family: var(--font-main);
     color: var(--color-dark-blue);
 }
@@ -523,7 +531,7 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     overflow: hidden;
 }
 
-.art-item img {
+.art-item-image-container img, .art-product-image-container img {
     display: inline;
     margin: auto;
     height: inherit;
@@ -563,25 +571,27 @@ li:hover .nav-link-sub-list { /*menú popup que aparece*/
     font-weight: bold;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
+    cursor: pointer;
 }
 
 .art-price {
-    display: inline;
+    display: flex;
     position: relative;
     margin: auto;
-    width: 100%;
+    width: auto;
     font-size: 1.2rem;
-    font-weight: bold;
+    font-weight: normal;
     font-family: var(--font-secondary);
     color: var(--color-dark-blue);
     text-align: center;
+    cursor: pointer;
 }
 
-.art-desc::first-letter {
+.art-desc::first-letter, .art-price::first-letter {
     text-transform: capitalize;
 }
 
-.art-desc-container:hover {
+.art-desc:hover, .art-price:hover {
     text-decoration: underline;
     text-decoration-color: var(--color-dark-blue);
     text-decoration-thickness: 0.1rem;
@@ -784,9 +794,9 @@ footer {
 }
 
 .create-account-form {
+    display: flex;
     height: auto;
-    width: 30%;
-    max-width: 30%;
+    width: 40%;
     margin: auto;
     border-style: none;
     background-color: var(--color-white);
@@ -932,6 +942,23 @@ footer {
     border-color: var(--color-lighter-blue);
 }
 
+.art-product-image-container {
+    position: relative;
+    display: flex;
+    height: 70vh;
+    width: auto;
+    overflow: hidden;
+}
+
+.product {
+    height: auto;
+    width: auto;
+    margin: 2%;
+    background-color: var(--color-white);
+    color: var(--color-dark-blue);
+}
+
+
 @media only screen and (max-width: 480px) { 
     .search-bar-container-visible {
         height: 6vh;
@@ -955,6 +982,15 @@ footer {
 
     .copyright-content {
         font-size: 0.5rem;
+    }
+
+    .create-account-form {
+        width: 80%;
+        max-width: 80%;
+    }
+
+    .product {
+        margin: 5%;
     }
 }
 
@@ -1046,7 +1082,7 @@ footer {
         left: 0;
         height: 100%;
         width: auto;
-        padding: 15% 0 0 2%;
+        padding: 20% 0 0 2%;
         margin: auto;
         flex-direction: column;
         justify-content: flex-start;
